Added EA 16.8-10, added more info to EA TOC

--- a/01_agama/ekottarika/31/EA_31_08.md
+++ b/01_agama/ekottarika/31/EA_31_08.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 31. Progressive | 8. The Bodhisattva’s Austerities'
+title: 'The Numerical Discourses | 31. Progressive | 8. Meditation Without Breathing'
 type: kramdown
 base: ../../../
 previous: ../27/EA_27_06.html
@@ -9,7 +9,7 @@ next: ../43/EA_43_05.html
 
 # [The Numerical Discourses](../index.html)
 ## 31. Progressive
-### 8. The Bodhisattva’s Austerities
+### 8. Meditation Without Breathing
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in a forest outside of Vaiśālī.
 {:#p1}
