--- a/01_agama/ekottarika/16/EA_16_07.md
+++ b/01_agama/ekottarika/16/EA_16_07.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 16: The Fire Extinguished | 7. The Ca
 type: kramdown
 base: ../../../
 previous: EA_16_06.html
-next: ../19/EA_19_01.html
+next: EA_16_08.html
 ---
 
 <h1><a href='../index.html'>The Numerical Discourses</a></h1>
