--- a/01_agama/ekottarika/16/EA_16_09.md
+++ b/01_agama/ekottarika/16/EA_16_09.md
@@ -184,7 +184,7 @@ next: EA_16_10.html
 <li id="n2"><p><em>Śakra, Brahmā, the four god kings, five hundred lesser gods, and the twenty-eight great <em>yakṣa</em> kings</em>. C. 釋、梵、四天王及五百天人，并二十八大鬼神王. Except for Brahmā, these are all divinities who lived on Mount Sumeru in Buddhist mythology. Śakra (a.k.a. Indra) ruled the Trayastriṃśa Heaven at the peak of Sumeru, and the four god kings acted as his vassals, each ruling a city a little lower on each side of the mountain. The five hundred other gods were likely the inhabitants of these cities. The twenty-eight <em>yakṣa</em> kings were the leaders of the <em>yakṣa</em> armies that defending the gods against the <em>asura</em>s. They lived on the lower parts of Mount Sumeru, which was quite gigantic at 84,000 <em>yojana</em>s in height. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>*Javata</em>. C. 闍拔吒 (EMC. ʒɪă-bʌt-ṭă = G. <em>jabata</em>?). This is a guess based on the transliteration. There are a couple possible S. words that it might be related to: One is <em>javādi</em>, a kind of perfume. Another is the verb <em>javate</em>, which can mean “to be quick, urge, incite, inspire, hurry.” The perfume connection seems possible given the character’s detecting the presumably pleasant smell of the gods in the story, but he also inspires the discourse by Aniruddha.</p>
 <p>In Pali sources, Brahmāyu’s disciple Uttara was dispatched to investigate whether the Buddha possessed the thirty-two signs of a great man. [<a href="#ref3">back</a>]</p></li>
-<li id="n4"><p><em>the clothes that he is wearing</em>. C. 身所著衣服. This curious expression is perhaps the result of a phonetic confusion of S. <em>vastra</em> and <em>vartma</em> or <em>vṛtta</em>, which are nearly homophones in P. (<em>vattha</em> and <em>vaṭṭa</em>). The former means “clothes,” while the latter mean “a course” or a “cycle,” which Buddhists used mataphorically for the cycle of rebirth. In P. sources such as MN 49, Brahmā is said to be ignorant of other realms of rebirth, which here seems to have changed somehow to his own clothes. Beyond this explanation, I can only surmise that there may have been some esoteric metaphor that is left unexplained. [<a href="#ref4">back</a>]</p></li>
+<li id="n4"><p><em>the clothes that he is wearing</em>. C. 身所著衣服. This curious expression is perhaps the result of a phonetic confusion of S. <em>vastra</em> and <em>vartma</em> or <em>vṛtta</em>, which are nearly homophones in P. (<em>vattha</em> and <em>vaṭṭa</em>). The former means “clothes,” while the latter mean “a course” or a “cycle,” which Buddhists used metaphorically for the cycle of rebirth. In P. sources such as MN 49, Brahmā is said to be ignorant of other realms of rebirth, which here seems to have changed somehow to his own clothes. Beyond this explanation, I can only surmise that there may have been some esoteric metaphor that is left unexplained. [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p><em>the self or oneself</em>. C. 吾、我. Both of these words in C. serve as first person pronouns, and ordinarily I would read them as a single word. Aniruddha defines them below as referring to a spiritual soul (神識, lit. “spirit consciousness”) and the physical incarnation of a person (形體之具, lit. “endowment of the bodily form”). As such, they apparently stood for a permanent and an impermanent self. Aniruddha is likely speaking to the brahmin about the Brahmanical belief in an eternal soul and tells him that it is not different than the body, arising with awareness. He doesn’t say that it isn’t real, but implies that it is at best as impermanent as one’s body. I’ve tried to approximate the difference by translating the two words as “self” and as a reflexive pronoun. [<a href="#ref5">back</a>]</p></li>
 </ol>
 <hr/>
