--- a/01_agama/ekottarika/16/EA_16_09.md
+++ b/01_agama/ekottarika/16/EA_16_09.md
@@ -111,7 +111,7 @@ next: EA_16_10.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.581a19'>阿那律曰： 「汝今，梵志，當持禁戒，無失毫釐。 亦當除去憍慢之結。 莫計吾、我染著之想。」</td>
-    <td id='p12'>12. Aniruddha said, “Now, brahmin, you should observe this precept without losing a bit of it. You must also leave behind the bondage of pride. Don’t form defiling notions about the self or oneself.<sup id="ref5"><a href="#n5">5</a></sup>”</td>
+    <td id='p12'>12. Aniruddha said, “Now, brahmin, you should observe this precept without losing a bit of it. You must also leave behind the bondage of pride. Don’t form defiling notions about the self or oneself.”<sup id="ref5"><a href="#n5">5</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.581a21'>時，梵志復問阿那律曰： 「何者是吾？何者是我？何者是憍慢結？」</td>
