--- a/01_agama/ekottarika/24/EA_24_06.md
+++ b/01_agama/ekottarika/24/EA_24_06.md
@@ -7,7 +7,7 @@ previous: EA_24_05.html
 next: ../27/EA_27_06.html
 ---
 
-# [The Numerical Discourses](../../index.html)
+# [The Numerical Discourses](../index.html)
 ## Chapter 24: Tall Flag
 ### 6. The Three Fasting Days
 
