--- a/01_agama/samyukta/13/SA13_74.md
+++ b/01_agama/samyukta/13/SA13_74.md
@@ -50,7 +50,7 @@ next: SA13_75.html
 ---
 
 ### Notes
-1. {:#n1} Parallels include [SN 45.8](https://suttacentral.net/sn45.8){: target="_blank"}, [SN 45.21](https://suttacentral.net/sn45.21){: target="_blank"}, [SA 13.25](SA13_25.html){: target="_blank"}, and T112. [\[back\]](#ref1)
+1. {:#n1} Parallels include [SN 45.8](https://suttacentral.net/sn45.8){: target="_blank"}, [SN 45.21](https://suttacentral.net/sn45.21){: target="_blank"}, [SA 13.25](SA13_25.html){: target="_blank"}, and [T112](../../other/T112.html){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
