--- a/01_agama/samyukta/14/SA14_3.md
+++ b/01_agama/samyukta/14/SA14_3.md
@@ -48,7 +48,7 @@ next: SA14_17.html
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is parallel with [SN 54.1](https://suttacentral.net/sn54.1){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn54.1" target="_blank">SN 54.1</a>, <a href="https://suttacentral.net/mn118" target="_blank">MN 118</a>, and <a href="../../samyukta3/T101_15.html" target="_blank">T101 Sūtra 15</a>. [\[back\]](#ref1)
 
 ---
 
