--- a/01_agama/samyukta/19/SA19_15.md
+++ b/01_agama/samyukta/19/SA19_15.md
@@ -76,7 +76,7 @@ Their cultivation is likewise!’
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA2 46](../../samyukta2/SA2_46.html){:target="_blank"}, and [EA 24.6](../../ekottarika/24/EA24_6.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SĀ2 46](../../samyukta2/SA2_46.html){:target="_blank"}, and [EĀ 24.6](../../ekottarika/24/EA_24_06.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
