--- a/01_agama/samyukta2/SA2_46.md
+++ b/01_agama/samyukta2/SA2_46.md
@@ -61,7 +61,7 @@ With virtues like myself.’
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA 19.15](../samyukta/19/SA19_15.html){:target="_blank"}, and [EA 24.6](../ekottarika/24/EA_24_6.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SĀ 19.15](../samyukta/19/SA19_15.html){:target="_blank"}, and [EĀ 24.6](../ekottarika/24/EA_24_06.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
